compiler/tests/pass/for_loop/main.afns
package fortest;

fn sum_to(n: i32) -> i32 {
    let total: i32 = 0;
    for let i: i32 = 0; i < n; i += 1 {
        total += i;
    }
    return total;
}

fn main() -> i32 {
    return sum_to(5);
}
