compiler/tests/fail/some_without_context.afns
package some_without_context_case;

fn main() -> i32 {
    let value = Some(1);
    return 0;
}
